-------------------------------------------------
- added base/idmap: This code allows for fast and efficient storage of
  pairs of [32-bit ID and a void* pointer].
  Such pairs can be set, reset and sought. This new class also allows to
  fastly iterate over the pairs.
  It allows for multiple storage algos. The first algo uses 8-step pointer
  tables of 16 entries per table.


2006/05/17: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added storage framework (to be used by some of my developing projects)
- added first storage plugin which uses local files
  The storage framework is not yet part of the official API of Gwenhywfar,
  so API changes are likely to occurr.


2006/05/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- base/idlist_p.h: increased GWEN_IDTABLE_MAXENTRIES from 16 to 32


2006/05/11: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- parser/db.c: increased word buffer size
- parser/xml.c: fixed a bug in GWEN_XMLNode_HandlePath


2006-05-10   Christian Stimming <stimming@tuhh.de>

	* configure.ac: Change RELEASE_STRING of svn versions from
	x.y.z-r111 to x.y.z.r111 because tools like rpmbuild do not accept
	a '-' inside the version numbers.


2006/05/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- removed prototype for a function which had been removed in previous
  versions


2006-04-24   Christian Stimming <stimming@tuhh.de>

	* test/README.MSVC: Update description on how to create a
	libgwenhywfar.lib file for MSVC.



2006/04/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- text.{c,h}: 
  - added function GWEN_Text_UnescapeN()
  - added function GWEN_Text_EscapeTolerant()
  - added function GWEN_Text_UnescapeTolerant()
  - added function GWEN_Text_UnescapeTolerantN()


2006-04-18   Christian Stimming <stimming@tuhh.de>
